--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -2,7 +2,7 @@
 
 // インナー幅設定
 // コンテンツのインナー幅（最も共通の幅が多い部分）
-$inner: 1100px;
+$inner: 934px;
 // ※キュンパス幅ではなくインナーの幅を指す
 
 // 余白
@@ -13,8 +13,8 @@ $padding-sp: 20px;
 // フォント設定
 ////////////////////
 
-$base-font-family: "";
-$second-font-family: "";
+$base-font-family: "Noto Sans JP", sans-serif;
+$second-font-family: "Roboto";
 // ※検証ツールでしっかり反映されているか確認する
 
 body {
@@ -31,5 +31,7 @@ $bold: 700;
 ////////////////////
 
 //色指定（共通性のあるものは出来る限り指定すると良い）
-$black: #111;
-$white: #fff;
+// $black: #111;
+// $white: #fff;
+$font-color:#4E301B;
+
