--- a/src/sass/page/_fv.scss
+++ b/src/sass/page/_fv.scss
@@ -3,13 +3,27 @@
 .fv {
   width: 100%;
   max-width: 100%;
+  height: 100vh;
   position: relative;
   z-index: 0;
+}
+
+.fv__inner {
+  width: 100%;
+  max-width: 100%;
+  height: inherit;
 }
 
 .fv__image {
   width: 100%;
   max-width: 100%;
+  height: inherit;
+}
+.fv__image img {
+  width: 100%;
+  max-width: 100%;
+  height: inherit;
+  object-fit: cover;
 }
 
 .fv__main-copy-wrapper {
