--- a/src/sass/module/_products-card.scss
+++ b/src/sass/module/_products-card.scss
@@ -1,13 +1,14 @@
 @use "global" as *;
 
 .products-card {
-  width: 100%;
-  max-width: 100%;
+  // width: 100%;
+  // max-width: 100%;
+  height: 100%;
   background: #fff;
   display: flex;
   flex-direction: column;
   @include mq(md) {
-    width: rem(264);
+    // width: rem(264);
   }
 }
 
@@ -31,15 +32,22 @@
   object-fit: cover;
 }
 
+.products-card__body {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: rem(16);
+}
+
 .products-card__heading {
   font-family: $base-font-family;
   font-size: rem(14);
   color: $font-color;
   font-weight: $bold;
   display: block;
-  padding-top: rem(16);
-  padding-right: rem(16);
-  padding-left: rem(16);
   @include mq(md) {
     font-size: rem(16);
   }
@@ -51,9 +59,6 @@
   color: $font-color;
   font-weight: $normal;
   display: block;
-  padding-right: rem(16);
-  padding-bottom: rem(16);
-  padding-left: rem(16);
   margin-top: auto;
   @include mq(md) {
     font-size: rem(16);
