--- a/src/sass/module/_access-list.scss
+++ b/src/sass/module/_access-list.scss
@@ -1,3 +1,46 @@
 @use "global" as *;
 // アクセスリスト
 
+.access-list {
+  width: 100%;
+  max-width: rem(600);
+  margin-right: auto;
+  margin-left: auto;
+  @include mq(md) {
+    max-width: 100%;
+  }
+}
+
+.access-list__item {
+  display: flex;
+  border-bottom: 1px solid #C6C6C6;
+  padding: rem(8) 0;
+  @include mq(md) {
+    padding: rem(21) 0;
+  }
+}
+
+.access-list__item:first-child {
+  border-top: 1px solid #C6C6C6;
+}
+.access-list__heading {
+  font-family: $base-font-family;
+  font-size: rem(16);
+  color: #4E301B;
+  font-weight: $bold;
+  width: 37.908%;
+  @include mq(md) {
+    font-size: rem(18);
+  }
+}
+
+.access-list__text {
+  font-family: $base-font-family;
+  font-size: rem(16);
+  color: #4E301B;
+  font-weight: $bold;
+  width: 62.091%;
+  @include mq(md) {
+    font-size: rem(18);
+  }
+}
