--- a/src/sass/page/_access.scss
+++ b/src/sass/page/_access.scss
@@ -1,2 +1,50 @@
 @use "global" as *;
 // アクセス
+
+.access {
+  margin-top: rem(40);
+  @include mq(md) {
+    margin-top: rem(91);
+  }
+}
+
+.access__contents-wrapper {
+  margin-top: rem(40);
+  display: flex;
+  flex-direction: column;
+  gap: rem(32);
+  @include mq(md) {
+    margin-top: rem(90);
+    flex-direction: row;
+  }
+}
+
+.access__list {
+
+}
+
+
+
+.access__map {
+  width: 100%;
+  max-width: 100%;
+  position: relative;
+}
+
+.access__map::before {
+  content: "";
+  display: block;
+  padding-top: 75.395%;// 334/443
+}
+
+.access__map iframe  {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+}
+
