--- a/src/sass/page/_access.scss
+++ b/src/sass/page/_access.scss
@@ -27,8 +27,13 @@
 
 .access__map {
   width: 100%;
-  max-width: 100%;
+  max-width: rem(600);
+  margin-right: auto;
+  margin-left: auto;
   position: relative;
+  @include mq(md) {
+    max-width: 100%;
+  }
 }
 
 .access__map::before {
