--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -4,7 +4,7 @@
 .about {
   width: 100%;
   max-width: 100%;
-  padding-top: rem(45);
+  // padding-top: rem(45);
   background-color: #FDF9EF;
 }
 
