--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -14,7 +14,10 @@
 }
 
 .contact__inner {
-
+  padding: 0 rem(10);
+  @include mq(md) {
+    padding: 0 rem(20);
+  }
 }
 
 .inner {
@@ -40,9 +43,11 @@
   font-weight:$bold;
   text-align: center;
   margin-top: rem(40);
+  padding: rem(35);
   @include mq(md) {
     font-size: rem(18);
     margin-top: rem(67);
+    padding: 0 rem(74);
   }
 }
 
