--- a/src/sass/module/_faq-list.scss
+++ b/src/sass/module/_faq-list.scss
@@ -11,25 +11,13 @@
   }
 }
 
-.faq-list__items {
-
-
-}
-
-.faq-list__item {
-
-}
-
 .faq-list__heading {
   background-color: #fff;
   padding: rem(12) 0 rem(12) rem(14);
   display: flex;
   gap: rem(8);
-  margin-top: rem(20);
+  align-items: center;
   position: relative;
-  @include mq(md) {
-    margin-top: rem(31);
-  }
 }
 
 // 下矢印
@@ -48,7 +36,32 @@
   z-index: 3;
 }
 
+.faq-list__heading.is-active::before {
+  opacity: 0;
+}
 
+// 上矢印
+.faq-list__heading::after {
+  opacity: 0;
+  content: "";
+  display: inline-block;
+  width: 100%;
+  max-width: rem(16);
+  aspect-ratio: 16/10.123;
+  background-image: url(../images/common/faq-arrow-up.png);
+  background-size: contain;
+  position: absolute;
+  top: 50%;
+  right: rem(20);
+  transform:translateY(-50%);
+  z-index: 3;
+}
+
+.faq-list__heading.is-active::after {
+  opacity: 1;
+}
+
+//質問のQマーク
 .faq-list__q {
   font-family: Roboto;
   font-size: rem(18);
@@ -60,6 +73,7 @@
   }
 }
 
+// 質問文
 .faq-list__question {
   font-family: $base-font-family;
   font-size: rem(16);
@@ -71,14 +85,39 @@
   }
 }
 
-.faq-list__text {
+// 質問
+.accordion-title:hover,
+.accordion-title:active,
+.accordion-title.is-active { 
+  text-decoration: underline;
+}
+
+.accordion-content {
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  line-height: 0;
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition-duration: .3s;
+  margin-top: rem(24);
+  @include mq(md) {
+    margin-top: rem(31);
+  }
+}
+
+// 回答が開いている時のスタイル
+.accordion-content.is-open {
+  display: block;
   font-family: $base-font-family;
   font-size: rem(14);
   color: #4E301B;
   font-weight: $normal;
-  margin-top: rem(12);
+  line-height: 1.5;
+  padding-bottom: rem(31);
+  height: auto;
+  opacity: 1;
   @include mq(md) {
     font-size: rem(16);
-    margin-top: rem(24);
   }
 }
