--- a/src/sass/module/_products-card.scss
+++ b/src/sass/module/_products-card.scss
@@ -1,15 +1,12 @@
 @use "global" as *;
 
 .products-card {
-  // width: 100%;
-  // max-width: 100%;
+  width: 100%;
+  max-width: 100%;
   height: 100%;
   background: #fff;
   display: flex;
   flex-direction: column;
-  @include mq(md) {
-    // width: rem(264);
-  }
 }
 
 .products-card__image {
@@ -21,6 +18,7 @@
   display: block;
   padding-top: 62.878%;// 166/264
 }
+
 .products-card__image img {
   width: 100%;
   max-width: 100%;
