--- a/src/sass/page/_faq.scss
+++ b/src/sass/page/_faq.scss
@@ -2,13 +2,29 @@
 // FAQ
 
 .faq {
-  margin-top: rem(40);
+  // margin-top: rem(40);
   padding: rem(40) 0;
   background-color: #FDF9EF;
+  position: relative;
+  z-index: 1;
   @include mq(md) {
-    margin-top: rem(91);
     padding: rem(91) 0;
   }
+}
+
+.faq::after {
+  content: "";
+  display: inline-block;
+  width: min( 18.359%, rem(235));
+  max-width: 100%;
+  aspect-ratio: 235/157;
+  background-image: url(../images/common/faq-breakfast-middle.png);
+  background-size: contain;
+  position: absolute;
+  left: calc(50% - min(48vw, 58%));
+  // bottom: rem(-78);
+  bottom: 0;
+  z-index: 1000;
 }
 
 .faq__section-title .section-title__text {
