--- a/src/sass/module/_contact-form.scss
+++ b/src/sass/module/_contact-form.scss
@@ -104,6 +104,13 @@ input[type="text"] {
   margin-left: rem(18);
 }
 
+.contact-form__radio {
+  margin-top: rem(8);
+  @include mq(md) {
+    margin-top: 0;
+  }
+}
+
 //***** ラジオボタンのデザイン *****
 //inputタグのデフォルトデザインを消す
 .radio-input {
