--- a/src/sass/page/_about.scss
+++ b/src/sass/page/_about.scss
@@ -23,13 +23,16 @@
 
 .about__image-wrapper {
 width: 100%;
+padding-bottom: 20%;
+position: relative;
 @include mq(md) {
   width: 84.154%;
   margin-left: auto;
+  padding-bottom: 0;
+}
 }
 
-}
-
+// アルパカに餌をあげる子供の画像
 .about__image-left {
   width: 100%;
   max-width: 100%;
@@ -41,14 +44,22 @@ width: 100%;
   max-width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: rem(150);
 }
+
+// 馬の親子画像
 .about__image-right {
-  width: 100%;
+  width: 50%;
   max-width: 100%;
   aspect-ratio: 393/250;
-  margin-top: rem(38);
+  margin-left: auto;
+  position: absolute;
+  right: 0;
+  bottom: 0;
   @include mq(md) {
-    width: 50%;
+    // width: 50%;
+    position: inherit;
+    margin-top: rem(38);
     margin-left: auto;
   }
 }
@@ -58,6 +69,7 @@ width: 100%;
   max-width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: rem(50);
 }
 
 .about__body {
@@ -72,14 +84,15 @@ width: 100%;
 
 .about__main-copy {
   font-family: $base-font-family;
-  font-size: rem(24);
+  // font-size: rem(24);
+  font-size: clamp(18px, 18px + 18 * (100vw - 375px) / 905, 40px);
   color: #35A1C3;
   font-weight: $bold;
   display: inline-block;
   background: rgba(255, 255, 255, 0.90);
   padding: rem(9) rem(10);
   @include mq(md) {
-    font-size: rem(40);
+    // font-size: rem(40);
   }
 }
 
