--- a/src/sass/page/_news.scss
+++ b/src/sass/page/_news.scss
@@ -8,6 +8,13 @@
   }
 }
 
+.news__list-wrapper {
+    margin-top: rem(40);
+    @include mq(md) {
+      margin-top: rem(90);
+    }
+}
+
 .news__image {
   width: 100%;
   max-width: 100%;
