--- a/src/sass/module/_access-list.scss
+++ b/src/sass/module/_access-list.scss
@@ -16,6 +16,7 @@
   border-bottom: 1px solid #C6C6C6;
   padding: rem(8) 0;
   @include mq(md) {
+    gap: rem(86);
     padding: rem(21) 0;
   }
 }
