--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -27,7 +27,8 @@
 .header__logo {
   margin: 0 auto;
   position: absolute;
-  top: -28.838%;
+  // top: -28.838%;
+  top: -39.795%;
   left: 50%;
   transform: translateX(-50%);
   z-index: 1;
