--- a/src/sass/module/_news-list.scss
+++ b/src/sass/module/_news-list.scss
@@ -4,14 +4,14 @@
 .news-list {
   width: 100%;
   max-width: rem(600);
-  margin-top: rem(40);
+  // margin-top: rem(40);
   margin-right: auto;
   margin-left: auto;
   position: relative;
   @include mq(md) {
     width: 100%;
     max-width: 100%;
-    margin-top: rem(90);
+    // margin-top: rem(90);
   }
 }
 
