--- a/src/sass/page/_faq.scss
+++ b/src/sass/page/_faq.scss
@@ -6,8 +6,10 @@
   padding: rem(40) 0;
   background-color: #FDF9EF;
   @include mq(md) {
-    margin-top: rem(79);//91-12
-    padding: rem(91) 0;
+    margin-top: rem(91);
+    padding-top: rem(91);
+    // padding: rem(91) 0;
+    padding: rem(60) 0;
   }
 }
 
@@ -15,9 +17,12 @@
   text-transform: uppercase;
 }
 
+
+
 .faq__list {
   margin-top: rem(32);
   @include mq(md) {
+    width: rem(740);
     margin-top: rem(73);
   }
 }
