thanks-pageのリンク修正

--- a/src/sass/module/_footer-nav.scss
+++ b/src/sass/module/_footer-nav.scss
@@ -21,7 +21,10 @@
   font-size: rem(14);  
   color: #4E301B;
   font-weight: $bold;
+  display: inline-block;
+  padding: rem(8) 0;
   @include mq(md) {
     font-size: rem(16);
+    padding: 0;
   }
 }
