不要な記述削除。font-size修正、余白調整ブロック追加

--- a/src/sass/module/_contact-form.scss
+++ b/src/sass/module/_contact-form.scss
@@ -10,11 +10,9 @@
   padding-bottom: rem(43);
   padding-right: 5%;
   padding-left: 5%;
-  margin-top: rem(40);
   @include mq(md) {
     max-width: rem(740);
     padding: rem(37) rem(76) rem(43);
-    margin-top: rem(93);
     margin-right: auto;
     margin-left: auto;
   }
@@ -37,7 +35,6 @@
   max-width: 100%;
   display: flex;
   flex-direction: column;
-  // align-items: center;
   margin-top: rem(24);
   @include mq(md) {
     max-width: rem(740);
@@ -239,8 +236,15 @@ input[type="text"] {
   color: #888;
   cursor: not-allowed;
 }
+// *必須項目に入力がありません。
+.error-message {
+  display: none;
+  text-align: center;
+  margin-top: rem(8);
+  color: red;
+}
 
-//googleフォームと連携より（しょーごさん）
+//googleフォームと連携より
 .end-message {
   display: none;
 }
@@ -249,9 +253,3 @@ input[type="text"] {
   display: none;
 }
 
-.error-message {
-  display: none;
-  text-align: center;
-  margin-top: rem(8);
-  color: red;
-}
