--- a/src/sass/module/_faq-list.scss
+++ b/src/sass/module/_faq-list.scss
@@ -109,15 +109,11 @@
   }
 }
 
-.accordion-content:first-child {
-
-}
-
 // 回答が開いている時のスタイル
 .accordion-content.is-open {
   display: block;
   font-family: $base-font-family;
-  font-size: rem(14);
+  font-size: clamp(1rem, 2.5vw, 14px);
   color: #4E301B;
   font-weight: $normal;
   line-height: 1.5;
