--- a/src/sass/module/_header-logo.scss
+++ b/src/sass/module/_header-logo.scss
@@ -17,10 +17,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: -3;//ロゴがタイトルにかぶっているので、後ほど修正
+  z-index: -3;
 }
-
-
 
 .header-logo__link img {
   width: rem(96);
