--- a/src/sass/module/_products-card.scss
+++ b/src/sass/module/_products-card.scss
@@ -6,6 +6,7 @@
   max-width: 100%;
   height: 100%;
   background: #fff;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
   display: flex;
   flex-direction: column;
 }
